--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <footer class="main-footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <span class="brand-m">M</span>
+                <span class="brand-m"></span>
                 <p>Matos Tecnologias</p>
             </div>
             <p class="copyright">© 2025 Todos os direitos reservados.</p>
@@ -59,3 +59,4 @@
 </body>
 
 </html>
+
